# eduagent

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTOR.md  README.md  check_env.sh  deploy.sh  dev.Dockerfile  dev.docker-compose.yaml  entrypoint.sh  example.eduagent.toml  prod.Dockerfile  prod.docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  dev-container.yml  integration.yml  prod-container.yml  unit.yml
docs/: TIPS.md  plan.txt
eduagent/: agent_manager.py  defs.py  errors.py  logger.py  settings.py
eduagent/agent_manager/: __init__.py  agent_manager.py  agent_types.py
eduagent/agents/: __init__.py  assessment_agent.py  base.py  question_generator.py  tutor_agent.py
eduagent/api/: __init__.py  api.py  endpoints.py  schemas.py
eduagent/api/endpoints/: __init__.py  analytics.py  assessment.py  exercises.py  knowledge.py  questions.py  users.py
eduagent/db/: __init__.py  config.py  models.py  service.py
eduagent/extractor/: __init__.py
eduagent/monitor/: __init__.py
eduagent/rag/: __init__.py  retrieval.py  strategies.py
eduagent/storage/: __init__.py  database_service.py  engine.py
eduagent/tools/: __init__.py  analytics_tool.py  assessment_tool.py  base.py  question_tool.py  rag_tool.py  types.py
eduagent/tools/retrieval/: __init__.py
eduagent/ui/: __init__.py  api_client.py  main.py  student_interface.py  teacher_interface.py  ui.py
eduagent/user/: __init__.py
eduagent/vector_store/: __init__.py  base.py  factory.py
tests/api/: test_api.py
tests/integration/: test_api.py
tests/unit/: test_api_structure.py  test_db_structure.py  test_defs.py  test_logger.py  test_settings.py
tests/unit/api/: test_api.py
