[project]
name = "eduagent"
version = "0.1.0"
description = "Education Agent: An Intelligent Question Generation System"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "requests>=2.32.5",
    "streamlit>=1.49.1",
    "uvicorn>=0.35.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "ruff>=0.13.0",
]
